# err-aprs-backend

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG.md  Dockerfile  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  dependabot-auto-merge.yml  issues.yml  pre-release.yml  release-docker.yaml  release.yml  test-docker.yaml  tests.yml
aprs_backend/: APRSHealth.plug  APRSHelp.plug  APRSWebserver.plug  __init__.py  aprs.plug  aprs.py  aprs_core_plugins.py  message.py  person.py  room.py
aprs_backend/clients/: __init__.py  _base.py  aprs_registry.py  aprsis.py  beacon.py  kiss.py
aprs_backend/exceptions/: __init__.py  processor.py
aprs_backend/exceptions/client/: __init__.py  aprsis.py
aprs_backend/exceptions/packets/: __init__.py  parser.py
aprs_backend/packets/: __init__.py  ackrej.py  list.py  parser.py  seen.py  tracker.py
aprs_backend/parser/: ackrej.py
aprs_backend/plugins/: __init__.py  health.py  help.py  web.py
aprs_backend/threads/: __init__.py  beacon.py  keep_alive.py  processor.py  rx.py  tx.py
aprs_backend/util/: message.py
aprs_backend/utils/: __init__.py  counter.py  datetime.py  plugins.py  position.py  version.py
docker/: README.md  config.py
tests/: conftest.py  test_fake.py
tests/clients/: test_aprs_registry.py  test_base.py  test_beacon.py
tests/test_utils/: test_utils.py
