[tool.poetry]
name = "err-aprs-backend"
version = "0.1.0"
description = "Errbot APRS backend plugin"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aprs_backend"}]
include = ["*.plug"]


[tool.poetry.dependencies]
python = "^3.11"
aprsd = "^3.0.0"

[tool.poetry.plugins]

[tool.poetry.plugins."errbot.backend_plugins"]
aprs = "aprs_backend:APRSBackend"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
coverage = {extras = ["toml"], version = ">=6.5,<8.0"}
safety = "^2.3.1"
pre-commit = ">=2.12.1"
pep8-naming = "^0.13.2"
reorder-python-imports = "^3.9.0"
pre-commit-hooks = "^4.2.0"
pyupgrade = "^3.3.1"
pytest-xdist = "^3.1.0"
ruff = ">=0.0.249,<0.0.279"
bandit = "^1.7.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests", "noxfile.py", ".github/scripts", "test_errbot", "dist"]

[tool.bandit.assert_used]
