[tool.poetry]
name = "err-aprs-backend"
version = "0.1.1"
description = "Errbot APRS backend plugin"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aprs_backend"}]
include = ["*.plug"]

[tool.poetry.dependencies]
python = "^3.11"
aprslib = "^0.7.2"
expiringdict = "^1.2.2"
dataclasses-json = "^0.6.4"
better-profanity = "^0.7.0"


[tool.poetry.plugins]

[tool.poetry.plugins."errbot.backend_plugins"]
aprs = "aprs_backend:APRSBackend"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = ">=6.5,<8.0"}
pre-commit = ">=2.12.1"
pep8-naming = "^0.13.2"
reorder-python-imports = "^3.9.0"
pre-commit-hooks = "^4.2.0"
pyupgrade = "^3.15.2"
pytest-xdist = "^3.1.0"
ruff = ">=0.0.249,<0.4.2"
bandit = "^1.7.8"
pytest-subtests = "^0.12.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests", "noxfile.py", ".github/scripts", "test_errbot", "dist"]

[tool.errbot.backend_plugins]
supported_errbot_version = ">=6.2.0"


[tool.pytest.ini_options]
norecursedirs = ".github ci .git .idea"
addopts = "--cov=aprs_backend --cov-report xml:.coverage.xml --cov-report=term-missing"
